# caracal

./: .gitmodules  CMakeLists.txt  build.sh  main.c  test.sh  utils.cmake
.github/workflows/: build_and_test.yml
ast/: CMakeLists.txt
ast/inc/: ast.h
ast/src/: ast.c
ast/test/: CMakeLists.txt  ast_make_compose_test.c  ast_make_number_test.c  ast_make_quote_test.c  ast_make_word_test.c
def/: CMakeLists.txt
def/inc/: def.h
def/src/: def.c
def/test/: def_equal_test.c  def_list_equal_test.c  def_make_let_test.c  def_make_list_test.c
heap/: CMakeLists.txt
heap/inc/: heap.h
heap/src/: heap.c
heap/test/: CMakeLists.txt  heap_alloc_and_free_test.c  heap_alloc_list_test.c  test_heap.h
lexer/: CMakeLists.txt
lexer/inc/: lexer.h
lexer/src/: lexer.c
lexer/test/: CMakeLists.txt  lexer_basic_test.c  lexer_id_and_nat_test.c  lexer_id_test.c  lexer_line_and_column_test.c  lexer_tokens_test.c
parser/: CMakeLists.txt  grammar.txt
parser/inc/: parser.h
parser/src/: parser.c
parser/test/: CMakeLists.txt  parser_and_expr_test.c  parser_basic_test.c  parser_expr_test.c  parser_mul_expr_test.c  parser_or_expr_test.c  parser_parse_def_test.c  parser_parse_file_test.c  parser_parse_type_test.c  parser_parse_word_test.c  parser_rel_expr_test.c  parser_sum_expr_test.c  parser_unary_expr_test.c  parser_unary_rel_expr_test.c
source_file/: CMakeLists.txt
source_file/inc/: source_file.h
source_file/src/: source_file.c
topo_sort/: CMakeLists.txt
type/: CMakeLists.txt
type/inc/: type.h
utils/: CMakeLists.txt
vm/: CMakeLists.txt
word/: CMakeLists.txt
(+33 files in other folders)
